[package]
name = "rust-bme-680"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/rust-bme-680"
homepage = "https://github.com/Dhruvesh08/rust-bme-680"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme680 = "0.6.0"
bitflags = "1.2"
embedded-hal = "=1.0.0-alpha.5"
log = "0.4"
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
env_logger = "0.9"
futures = { version = "0.3" }
i2cdev = "0.5"
influx_db_client = { version = "0.5", default-features= false, features = ["rustls-tls"] }
tokio = {version = "1.5", features = ["full"] }
url = "2.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4.0-alpha.1"